@startuml Workflow Node States

' Purpose: This diagram illustrates the states of a node within the workflow builder interface.
' It focuses on the UI/UX perspective of how nodes behave during workflow editing and execution.
' This is distinct from the agent-state-transitions.puml which shows runtime agent behavior.

' Styling
skinparam StateBackgroundColor #FEFEFE
skinparam StateBorderColor #666666
skinparam ArrowColor #666666
skinparam StateStartColor #445566
skinparam StateEndColor #445566

' Title
title Workflow Node States (UI Perspective)

' States
[*] --> Initial : Create Node

state Initial {
    [*] --> Idle : Workflow Start
    Idle --> Initial : Reset for Edit
    Idle --> Activating : Node's Turn
    Activating --> Working : Ready
    Working --> Complete : Task Success
    Working --> Error : Task Failed
    Working --> Assistance : Need Help
    Error --> Working : Resume
    Error --> Initial : Reset
    Assistance --> Working : Help Received
    Complete --> Initial : Reset
}

' Notes
note right of Initial
  Default state
  Node can be edited
end note

note right of Idle
  Waiting for turn
  in workflow
end note

note right of Activating
  Preparing to execute
  task
end note

note right of Working
  Actively executing
  assigned task
end note

note right of Error
  Task failed
  Pauses workflow
end note

note right of Assistance
  Needs human input
  to continue
end note

note right of Complete
  Task completed
  successfully
end note

@enduml
